<resources>
    <string name="app_name">Thrilling Picks</string>
    <string name="login_title">Login</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="begin_as_a_guest_user">Begin as a Guest User</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="promocode">Referral Code</string>
    <string name="forgot_your_password_txt">Forgot Your Password</string>
    <string name="email">Email-ID</string>
    <string name="submit">Submit</string>
    <string name="dob">Date Of Birth</string>
    <string name="reset_password_str">Enter your email address below and we\'ll send you a secure link to reset your password</string>
    <string name="title_activity_home_navigation">HomeNavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gulfstream_park_string">Gulfstream Park</string>
    <string name="saturday_march_16_2019_dummy">Saturday March 16 2019</string>
    <string name="strong_advantage_wew_dercted_in_these_races_dummy">Strong advantage wew dercted in these races</string>
    <string name="back_string">Back</string>
    <string name="race_4_dummy">Race #4 :</string>
    <string name="_3_45_est_dummy"> 3:45 EST</string>
    <string name="_6_joycee_s_spirit_dummy">#6 JOYCEE\'S SPIRIT</string>
    <string name="the_public_may_dummy_string">The public may not expect this runner. Historically similar runners with strong trainer/jockey combos and last E2 paces finish in the money 70%</string>
    <string name="bet_structures_dummy">Bet Structures</string>
    <string name="dummy_string">$4 EX 6 w/3,8</string>
    <string name="dummy_string_2">$4 EX 6 w/6</string>
    <string name="dummy_string_3">$4 EX 6 w/7</string>
    <string name="_10_superfcta_dummy">10 superfecta</string>
    <string name="dummy_4">P1 3,6,8</string>
    <string name="dummy_5">P2 3,6,8</string>
    <string name="dummy_6">P3 1,3,5,6,8</string>
    <string name="p4_all_dummy_7">P4 All</string>
    <string name="home_string">Home</string>
    <string name="full_name_string">Full Name</string>
    <string name="arya_stark_dummy">Arya Stark</string>
    <string name="aryastark_gmail_com_string">aryastark@gmail.com</string>
    <string name="logout_string">Logout</string>
    <string name="choose_your_plan_string">Choose Your Plan</string>
    <string name="_600_month_dummy">600$/month</string>
    <string name="monthly_string">Monthly</string>
    <string name="_10_discont_dummy">10% Discont</string>
    <string name="_900_year_dummy">900$/Year</string>
    <string name="yearly_string">Yearly</string>
    <string name="_12_discont_string">12% Discont</string>
    <string name="your_monthly_rate_dummy">Your Monthly rate</string>
    <string name="_540_00_dummy">$ 540.00</string>
    <string name="are_you_searching_string">Are You Searching For\nThe Darkhorse?</string>
    <!--<string name="login_type_heading_string">We reveal the longshots with strongest\nadvantages for today\'s specific race type.</string>-->
    <string name="login_type_heading_string">We reveal dark horses, sleepers and
        long shots with the strongest advantages to finish in the money</string>


    <string name="confirm_email_id_string">Confirm Email-Id</string>
    <string name="user_name_dummy">User Name</string>
    <string name="lorem_ipsum_is_dummy_text_dummy">Lorem Ipsum is dummy text</string>
    <string name="_22_05_1987_dummy">22-05-1987</string>
    <string name="edit_string">Edit</string>
    <string name="add_new_card_title_string">Add New Card</string>
    <string name="delete_string">Delete</string>
    <string name="enter_name_hint_string">Enter Name</string>
    <string name="add_to_quickpay_string">Add To QuickPay</string>
    <string name="add_new_card_string_1">Save this Card info to my account and make faster payments</string>
    <string name="add_string">Add</string>
    <string name="rewards_title_string">Rewards</string>
    <string name="_00_00_dummy_string">To Pay: </string>
    <string name="apply_string">Apply</string>
    <string name="debit_credit_card_title_string">Debit/Credit Card</string>
    <string name="add_new_card_string">ADD NEW CARD</string>
    <string name="pay_string">PAY</string>
    <string name="change_password_string">Change Password</string>
    <string name="old_password_string">Old Password</string>
    <string name="new_password_hint_string">New Password</string>
    <string name="confirm_password_hint_string">Confirm Password</string>
    <string name="user_dummy_gmail_com_dummy">user_dummy@gmail.com</string>
    <string name="recent_wins_string">Recent wins</string>
    <string name="invite_friends_string">Invite Friends</string>
    <string name="cards_string">Cards</string>
    <string name="my_account_string">My Account</string>
    <string name="or_string">Or</string>
    <string name="get_our_thrilling_tip_sheets_string">Get Our Thrilling Tip Sheets</string>
    <string name="guest_pass_string">Guest Pass</string>
    <string name="already_have_the_edge_string">Already Have The Edge</string>
    <string name="log_in_string">Log In</string>
    <string name="pricing_title_string">Pricing</string>
    <string name="next_string">Next</string>
    <string name="you_have_an_account_string">You have an account</string>
    <string name="signin_string">Sign In</string>
    <string name="upload_image_string">Upload Image</string>
    <string name="from_gallery_string">From Gallery</string>
    <string name="take_image_string">Take Image</string>
    <string name="cancel_string">Cancel</string>
    <string name="my_account_dummy">My Account</string>
    <string name="card_type_string">CARD TYPE</string>
    <string name="holder_name_dummy">HOLDER NAME</string>
    <string name="xxxx_xxxx_xxxx_0000_dummy">XXXX XXXX XXXX 0000</string>
    <string name="_05_19_dummy">05 / 19</string>
    <string name="cvv_string">CVV</string>
    <string name="xxx_dummy">XXX</string>
    <string name="bob_referred_steve_dummy">Bob_referred_Steve</string>
    <string name="track_name_race_date_dummy">Track Name Race Date</string>
    <string name="set_type_paid_dummy">set type paid $</string>
    <string name="_4_days_dimen">4 Days</string>
    <string name="monthly_auto_renwal_string">Monthly Auto-renwal</string>
    <string name="_20_dummy">$20</string>
    <string name="enter_email_msg_string">Enter Email</string>
    <string name="enter_valid_email_msg_string">Enter Valid Email</string>
    <string name="no_internet_string">No Internet Connection</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_valid_password">The Password length must be 6 characters and it  should contain atleast one number </string>
    <string name="enter_name">Enter Full Name</string>
    <string name="enter_valid_name">Enter Valid Full Name</string>
    <string name="enter_confirm_email">Enter Confirm Email</string>
    <string name="email_and_confirm_email_same">The Email and Confirm Email must be match</string>
    <string name="enter_dob">Enter Date Of Birth</string>
    <string name="set_dob_string">Set Date Of Birth</string>

    <string name="set_string">Set</string>
    <string name="enter_card_number">Enter Card Number</string>
    <string name="enter_exp_date">Enter Expiry Date</string>
    <string name="enter_cvv_number">Enter CVC Number</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="enter_valid_old_password">The Old Password length must be 6 characters and it should contain atleast one number</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_valid_new_password">The New Password length must be 6 characters and it should contain atleast one number</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="enter_valid_confirm_password">The Confirm Password length must be 6 characters and it should contain atleast one number</string>
    <string name="enter_password_must_be_same">The New Password or Confirm Password must be same</string>
    <string name="bet_type">Bet\nType</string>
    <string name="bet_total">Bet\nTotal</string>
    <string name="selection_item"> 1st: 2,4,\n8-10\n2nd: 2,4,\n8-11\n3rd:2,4,\n8-11\n4th:2,
        4,\n8-11</string>
    <string name="recent_result">Recent Result\u0020:</string>
    <string name="your_subscription">Your Subscription auto-renews\non 00/00/0000\nfor $30.00</string>
    <string name="dummy_login_heading">As our mission is to protect your bankroll, we only
        publish picks once distinct signals are identified </string>
    <string name="first_last_name_text"><![CDATA[First & Last Name]]></string>
    <!--for facebook use-->
    <string name="facebook_app_id">677282862702400</string>
    <string name="fb_login_protocol_scheme">fb677282862702400</string>

</resources>
