<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8">

            <TextView
                android:id="@+id/race_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/race_4_dummy"
                android:textColor="@color/blackTextColor"
                android:textSize="@dimen/text_17" />

            <TextView
                android:id="@+id/rate_estimate_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/_3_45_est_dummy"
                android:textColor="@color/light_gray_color"
                android:textSize="@dimen/text_17" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/paid_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/detail_bg"
                android:orientation="vertical"
                android:paddingLeft="@dimen/margin_10"
                android:paddingTop="@dimen/margin_10"
                android:paddingRight="@dimen/margin_10"
                android:paddingBottom="@dimen/margin_20">

                <TextView
                    android:id="@+id/horse_detail_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/_6_joycee_s_spirit_dummy"
                    android:textColor="@color/light_gray_color"
                    android:textSize="@dimen/text_15" />

                <TextView
                    android:id="@+id/desc_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_3"
                    android:fontFamily="@font/poppins"
                    android:lineSpacingExtra="@dimen/margin_5"
                    android:text="@string/the_public_may_dummy_string"
                    android:textSize="@dimen/text_17" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/bet_structures_dummy"
                    android:textColor="@color/light_gray_color"
                    android:textSize="@dimen/text_17"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/dummy_string"
                    android:textSize="@dimen/text_17"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/dummy_string_2"
                    android:textSize="@dimen/text_17"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/dummy_string_3"
                    android:textSize="@dimen/text_17"
                    android:visibility="gone" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/_10_superfcta_dummy"
                    android:textColor="@color/light_gray_color"
                    android:textSize="@dimen/text_17"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/dummy_4"
                    android:textSize="@dimen/text_17"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/dummy_5"
                    android:textSize="@dimen/text_17"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/dummy_6"
                    android:textSize="@dimen/text_17"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/p4_all_dummy_7"
                    android:textSize="@dimen/text_17"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/guest_ll"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/detail_guest_bg"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="For Access Purchase Subscription"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="24dp" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>