<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_10"
    android:background="@drawable/round_dialog_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/margin_25"
        android:paddingBottom="@dimen/margin_15">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/upload_image_string"
            android:textColor="@color/black_color"
            android:textSize="@dimen/text_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linear_upload_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/margin_40"
                android:layout_height="@dimen/margin_40"
                android:scaleType="fitXY"
                android:src="@drawable/ic_attach" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/from_gallery_string"
                android:textColor="@color/light_gray_color"
                android:textSize="@dimen/text_14" />
        </LinearLayout>

        <View
            android:layout_width="@dimen/margin_1"
            android:layout_height="match_parent"
            android:background="@color/color_light_gray" />

        <LinearLayout
            android:id="@+id/linear_upload_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/margin_40"
                android:layout_height="@dimen/margin_40"
                android:scaleType="fitXY"
                android:src="@drawable/ic_camera_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/take_image_string"
                android:textColor="@color/light_gray_color"
                android:textSize="@dimen/text_14" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_1"
        android:layout_marginTop="@dimen/margin_15"
        android:background="@color/color_light_gray" />

    <LinearLayout
        android:id="@+id/text_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/cancel_string"
            android:textColor="@color/light_gray_color"
            android:textSize="@dimen/text_14" />
    </LinearLayout>
</LinearLayout>