<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".07"
        android:background="@color/splash_bg_color"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_15"
            android:layout_marginRight="@dimen/margin_15"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/detail_back_ll"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".1">

                <ImageView
                    android:id="@+id/choose_plan_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_back" />
            </LinearLayout>


            <TextView
                android:id="@+id/detail_title_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".8"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="left|center_vertical"
                android:text="@string/pricing_title_string"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_16" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:gravity="right">


                <ImageView
                    android:id="@+id/manu_setting_iv"
                    android:layout_width="@dimen/margin_25"
                    android:layout_height="@dimen/margin_30"
                    android:src="@drawable/ic_menu_dot"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".93"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".35"
            android:background="@color/gary_light_1_color"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="@dimen/margin_15"
                android:paddingBottom="@dimen/margin_5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/choose_your_plan_string"
                    android:textColor="@color/black_color"
                    android:textSize="@dimen/text_16" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/plan_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".53"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingTop="@dimen/margin_15">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_15"
                android:layout_marginRight="@dimen/margin_15"
                android:gravity="right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/your_monthly_rate_dummy"
                    android:textColor="@color/blackTextColor"
                    android:textSize="@dimen/text_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/_540_00_dummy"
                    android:textColor="@color/tabSelectedColor"
                    android:textSize="@dimen/text_16" />
            </LinearLayout>

            <Button
                android:id="@+id/choose_plan_next_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/margin_15"
                android:layout_marginRight="@dimen/margin_15"
                android:layout_marginBottom="@dimen/margin_30"
                android:background="@drawable/bg_login_btn"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/next_string"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_16"
                android:translationZ="@dimen/margin_5" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>