<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".views.activities.DetailActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".07"
        android:background="@color/splash_bg_color"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_15"
            android:layout_marginRight="@dimen/margin_15"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/detail_back_ll"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".1">

                <ImageView
                    android:id="@+id/menu_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_back" />
            </LinearLayout>


            <TextView
                android:id="@+id/detail_title_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".8"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="left|center_vertical"
                android:text="@string/gulfstream_park_string"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_16" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:gravity="right">


                <ImageView
                    android:id="@+id/manu_setting_iv"
                    android:layout_width="@dimen/margin_25"
                    android:layout_height="@dimen/margin_30"
                    android:src="@drawable/ic_menu_dot"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".84">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_15"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_15"
                android:layout_marginBottom="@dimen/margin_10"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/race_date_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/saturday_march_16_2019_dummy"
                    android:textColor="@color/itemTitleColor"
                    android:textSize="@dimen/text_17" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/strong_advantage_wew_dercted_in_these_races_dummy"
                    android:textColor="@color/loginViewBg"
                    android:textSize="@dimen/text_13"
                    android:visibility="gone"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/detail_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8" />

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".09"
        android:gravity="center">

        <TextView
            android:id="@+id/detail_back_tv"
            android:layout_width="@dimen/dimen_180"
            android:layout_height="@dimen/dimen_45"
            android:background="@drawable/back_button_bg"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/back_string"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_16" />

    </LinearLayout>
</LinearLayout>